# ChangeLog for dev-db/myodbc
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/myodbc/ChangeLog,v 1.44 2015/05/17 21:24:37 grknight Exp $

  17 May 2015; Brian Evans <grknight@gentoo.org> -files/5.2.7-cxxlinkage.patch,
  -files/myodbc-5.1.6-qt4-includedir.patch, -myodbc-5.1.6.ebuild,
  -myodbc-5.2.7.ebuild:
  Drop old; 5.1 series no longer builds with current libmysqlclient from servers

  19 Apr 2015; Pacho Ramos <pacho@gentoo.org> myodbc-5.2.7-r1.ebuild:
  x86 stable wrt bug #525298

  02 Mar 2015; Agostino Sarubbo <ago@gentoo.org> myodbc-5.2.7-r1.ebuild:
  Stable for ppc, wrt bug #525298

  12 Feb 2015; Pacho Ramos <pacho@gentoo.org> myodbc-5.2.7-r1.ebuild:
  amd64 stable, bug #525298

  15 Nov 2014; Chema Alonso <nimiux@gentoo.org> myodbc-5.2.7.ebuild:
  Stable for amd64 wrt bug #513646

*myodbc-5.2.7-r1 (01 Sep 2014)

  01 Sep 2014; Brian Evans <grknight@gentoo.org>
  +files/5.2.7-r1-cxxlinkage.patch, +myodbc-5.2.7-r1.ebuild:
  Revision bump to enable multilib

  20 Aug 2014; Brian Evans <grknight@gentoo.org> +files/5.2.7-cxxlinkage.patch,
  +files/5.2.7-mariadb-dynamic-array.patch, myodbc-5.2.7.ebuild:
  Fix build failures on >=dev-db/mariadb-10.0

*myodbc-5.2.7 (29 Jul 2014)

  29 Jul 2014; Brian Evans <grknight@gentoo.org> +myodbc-5.2.7.ebuild,
  -myodbc-5.2.6.ebuild:
  Version bump, fix slotting of installer utility, and bump required mysql
  version. Remove old

*myodbc-5.2.6 (04 May 2014)

  04 May 2014; Brian Evans <grknight@gentoo.org> +files/cmake-doc-path.patch,
  +myodbc-5.2.6.ebuild:
  Version bump to 5.2.6. Fixes bugs #380141, #442322, #462432, #474088

  10 May 2013; Patrick Lauer <patrick@gentoo.org> myodbc-5.1.6.ebuild:
  Fix src_prepare

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> myodbc-5.1.6.ebuild:
  Move Qt dependencies to the new category

  31 Jul 2012; Michael Palimaka <kensington@gentoo.org> myodbc-5.1.6.ebuild:
  Add missing slot dependencies on Qt.
