@@ -8,24 +8,25 @@ AUX odbc.ini.m4 517 SHA256 0f14bd8815aac8c75ff3b2b6e86b2883fbe4e2e6e3de153e77209
 AUX odbcinst.ini.m4 233 SHA256 893011ec62a2631cf41521717cbebfddf48ae3a633c8ca1e7774f11930fe2537 SHA512 d6a27b1915133e23ab4f16930446e6c623e3636490c1a772a531805d6abbaf8470fa59924f68f01faabf496be7b5f17294fe51a9f940dfa45f03a9abc120f953 WHIRLPOOL e8a10ae834eb97e63ed3dc637f534e556c9e13d11dc71ac0f9e3a0f16054d9e8a23be7bf6f68319817a9bdde7ae735b55be86728f80b7ec4d5ffe00d403c6536
 DIST mysql-connector-odbc-5.2.7-src.tar.gz 606472 SHA256 0ad8fcccb4c41c7100fe02ec0aa87938d33329d23f7b68d1b9031c87750392c9 SHA512 f54ac8a23ade71da85e1335e95eccdccfd68a8687d17a584ced103812bdc5aee8014769a84eaa22724bb2cb23d34c7188c964d3283723defeaef5157a4b3c60f WHIRLPOOL 928808ac5b623ec345c8c1b8495ca1de7f10e65f0d14720e9bee6ab154ccf818ca690745a57fa7fa1c008ba57b24705657398cd9146fbf2e385c178deca0e499
 EBUILD myodbc-5.2.7-r1.ebuild 3396 SHA256 5ea6a923d5c99957b1793d87bd57794656ed6f06e6101ed47a9c8a01298c5a08 SHA512 35f1c45be864ab59040f8478a03bc16938f5faf7d489f1ace518378b2c5b772472013cd5883ad4d7a5b2dbf7be93788cb178d8b8056dbebdb800677036c13105 WHIRLPOOL 7b0a2bb6d68ace7c776778e022f1a697a78a7c8bdab62c7d3b50911286ff8a94d6347d9b7486074e0b150171ea8e778cacd665ca14d6de434e9aac9db900f9d0
-MISC ChangeLog 6162 SHA256 d10e1200a9ba81821c4bd4ee937d97e658f8fbb5a6358ae3f66958133efa354c SHA512 083eaba41d46b2ef9817dc5a3d810128564e12ef373c44f6007eeed1245379847b382375af2b39dac8e16b222cb718c7a3a9838a1f512fce758914086d1f1228 WHIRLPOOL bd995078e99eed21d23965b288fb7f77685a54981f76a7f48a0cc8b92886f7f8540a8b964365d61083d0df481234d47741e324d9d10c436115833c44c6bbc71f
+EBUILD myodbc-5.2.7-r2.ebuild 3476 SHA256 5af1e918465c61d67532047669cc002cf75a739417b8ffc7ed27ae565c060c68 SHA512 20aff58e453b36a5159c8e7c11e7d8afab58198bc03b1a422f27f0e619ea4ca6331b582bc5518bef82f641ae5688d575492dcf0684ff1f7acc06b46e7ceb97f5 WHIRLPOOL 6c92f94f948f2f32b636c12e9805ca3302a6ddaadcee303790c5f7492b8d12317da368e9b60489103256f7dcf2c55f39004ad7eea309d9d3f39405cd33cda9ed
+MISC ChangeLog 6332 SHA256 9d1fd022bebea13d7e022ae399c5bd9d7f6736d6861fc0bcca5d4a3100e089e0 SHA512 7dcf5931409c9570a1e9e328dfdc30974cd38a6e1207a81e6c8eb6a045e4f65d23b23fc1c3289f3cb25c5a9dc1f021ca566390e96e2c24a4d65ff6dc56ee5eed WHIRLPOOL d1ce37c34ad52b688a9a7493a787b3eae72d6498191600afdf7a3c1fb322ef491d28e7a87f84ac07a995d68f17225dea8a8c4fa622e305aa72ab0c7867b4cae4
 MISC metadata.xml 158 SHA256 a212959a64142f5508788a3d336b55cdb97645b6e54d8a887e7308c67791d569 SHA512 538b01075e7bf3f429546654620fa773f3926594d7747d778ce6250263a7ba32fd7e63e14232fd89d503780b783fb7ab401ff2a0040a8d36c99c5c232609ca56 WHIRLPOOL 1739fa77f8bf21977b25d7c05d8da902f0a30335da5fcaca2b35200e504199c645d4115b8d2b4790ccdb692d7010c7a2cc09b27994679af8be6164f1c007e964
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2.1
 
-iQJ8BAEBCABmBQJVWQcZXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJVw6dzXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2NkMyRTQ0RUQ5MEUzMjc1OEU3RDU1QzBE
-MUY3ODFFRkY5RjRBM0I2AAoJENH3ge/59KO2SLkQAIp2p0TPguTnjmbEYVxQKwnG
-oyNMcZ0/zsnoDWV8o4j0aHOqH2zQQbiBcua+t2+tejCjoFyQqyPeOGjzxILctoif
-LCKKryRG26XQylTsdQTEJnEdrG3VGBDKcBmIWFcPkyIJzWWl5A5+B38BjjdXelUb
-lL8Pr/JgZYAWqh19cwtcr+Cne+KxtrH9qW8VXAo7vqSM/7Q4gQWxsBprokYTsRFK
-B6gaEKnSjsK+PxQU7N9jqEBfKsFRsG54sW0wYrqSWEF8Ymt99HlVcGYtjpqPhuMb
-4aiKqUN0eWkqzphQJZfQ8D+5w1zZTvKWbwKeTaM/wmciHcHNxQVWd9Zj9fQHEcsF
-UDIA3lrCXvZd5Yy/q5kH53krZeJyp0kXiLij+NKXZqIE9+K9m3lrpknYiysnDIp1
-0Tm3RRTQXapQVexIy0LxxDK0XiaiEVRudiSWUiQDfXjqzuMMabzbgeajG9Bk7+uz
-rJxsSp66ki4QP2slsem0hsZq0sNNb/nNVwJ4deFEcfybKHbrlvVM3zgF8zfd5gfJ
-AzYtX83BMDBdQell6ORa93epR6JbKiCdiqRm2YN7Q/lA/Lavrzc5yovTuq9Mfo44
-9FD1uHPdrRzX+M82j9nJArcF+x8NXk2uONfysfLh5p6lTjFQKLojjxeZhDoEV5t3
-yw4sAlINMTZ4VYt7BadP
-=UYl/
+MUY3ODFFRkY5RjRBM0I2AAoJENH3ge/59KO2mzEP/R6Va10QJAM45QWNwJIm0VdX
+dJzwbR+bmqojBJzOErE3DKk5WrYw1ZLkiFKRGIgF8cRykwefGLayueBJzWSArrCd
+uc4PFYbSRy3s3Zwv4h7CdgJNpZ9+eguW7pNz0TRqGlMU7Ft4TMLTFHsZLOYyIQOA
+VZNLRtyYlc7fIH/Rumh5K3360FuMe68mb2c+5CwBQ7WHIu172GwvK1ifUqqRhUmV
+vw8fOU3IEcEXv82rnNHfNicIQYAkxZs164c1hQ+zbF/u0FC5pT54yYSHdRbCMhN9
+M3QLUCFz+YrqJ2Gac+BWGzi8MmTa64Du6/1NyKY1y47+i9S7P4DyX1MCL/xDkNXy
+f3Ql64SvglNt4OLWk0ZoAxRjMno35UWD5gaTKLrxWmrv7GFWS02F6ft1MCzx9bro
+Nxgiqj4KjrtztvQSEuOUa/5q9DjkUOIK0VvUTaGRQAECKo+HUWDgineMPBgrhwYD
+BgIbYXbjwgFHnplFjkg/BteFFMV/VI6Q5R5r4+kLJkqC3NpKTcCZvlt6pLfBUSsp
+f5LC0YlSl8YHncUFTWYcUNqq073l0Vd5Q0m6U4Bvv0tozFQoudCjRB9NCI4DGLLH
+xQVazKJf60RnPA0UHFCLyZRaUm3VZRMkl//1DVIwCv4DjmREY9tB3fX67V8nsjrD
+H1EhLchSAy44MEasCe2p
+=PlyR
 -----END PGP SIGNATURE-----
